options set. skeleton set

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
   </head>
   <body>
     <div class="main">
-      main
-      <div class="container">container</div>
+      <div class="container-tierlist">
+        <input type="text" name="" id="" />
+      </div>
+      <div class="container-options">
+        <p>a</p>
+        <p>b</p>
+        <p>c</p>
+      </div>
     </div>
   </body>
 </html>
