--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <body>
     <div class="main">
       <div class="container-tierlist">
-        <input type="text" name="" id="" />
+        <input type="text" name="" id="S" />
+        <input type="text" name="" id="A" />
+        <input type="text" name="" id="B" />
+        <input type="text" name="" id="C" />
+        <input type="text" name="" id="D" />
       </div>
       <div class="container-options">
         <p>a</p>
