Tests done. Imports to es6. Initial test for loading script
All tests have been done and ran against current Node and DoublyLinkedList data structures.
module.exports is not compatible for imports to index.js to manipulate the DOM directly
A solution in this regard is still pending

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
         <input type="text" name="" id="C" />
         <input type="text" name="" id="D" />
       </div>
-      <div class="container-options">
-        <p>a</p>
-        <p>b</p>
-        <p>c</p>
-      </div>
+      <div class="container-options"></div>
     </div>
   </body>
 </html>
