ITS ALIVE!!!!!! IT WORKS!!!!

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <div class="main">
+      <div class="container-options"></div>
       <div class="container">
         <input type="text" name="S" class="tiers" id="S" value="S" />
-        <div class="container-tierlist" id="'drop-area S">
+        <div class="container-tierlist" id="drop-area S">
         </div>
         <input type="text" name="A" class="tiers" id="A" value="A" />
         <div class="container-tierlist" id="drop-area A">
@@ -27,8 +28,13 @@
         <div class="container-tierlist" id="drop-area D">
         </div>
       </div>
+      <div class="dropzone">
+        <div id="draggable" draggable="true">
+          This div is draggable
+        </div>
+      </div>
+      <div class="dropzone"></div>
     </div>
-      <div class="container-options"></div>
     </div>
   </body>
 </html>
