index style refactor

--- a/index.html
+++ b/index.html
@@ -13,28 +13,16 @@
       <div class="container-options"></div>
       <div class="container">
         <input type="text" name="S" class="tiers" id="S" value="S" />
-        <div class="container-tierlist" id="drop-area S">
-        </div>
+        <div class="container-tierlist" id="drop-area S"></div>
         <input type="text" name="A" class="tiers" id="A" value="A" />
-        <div class="container-tierlist" id="drop-area A">
-        </div>
+        <div class="container-tierlist" id="drop-area A"></div>
         <input type="text" name="B" class="tiers" id="B" value="B" />
-        <div class="container-tierlist" id="drop-area B">
-        </div>
+        <div class="container-tierlist" id="drop-area B"></div>
         <input type="text" name="C" class="tiers" id="C" value="C" />
-        <div class="container-tierlist" id="drop-area C">
-        </div>
+        <div class="container-tierlist" id="drop-area C"></div>
         <input type="text" name="D" class="tiers" id="D" value="D" />
-        <div class="container-tierlist" id="drop-area D">
-        </div>
+        <div class="container-tierlist" id="drop-area D"></div>
       </div>
-      <div class="dropzone">
-        <div id="draggable" draggable="true">
-          This div is draggable
-        </div>
-      </div>
-      <div class="dropzone"></div>
-    </div>
     </div>
   </body>
 </html>
