--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./init.js"></script>
     <title>TierList clone</title>
   </head>
   <body>
