--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <script type="module" src="./init.js"></script>
     <title>TierList clone</title>
@@ -11,17 +17,72 @@
   <body>
     <div class="main">
       <div class="container-options"></div>
-      <div class="container">
-        <input type="text" name="S" class="tiers" id="S" value="S" />
-        <div class="container-tierlist" id="drop-area S"></div>
-        <input type="text" name="A" class="tiers" id="A" value="A" />
-        <div class="container-tierlist" id="drop-area A"></div>
-        <input type="text" name="B" class="tiers" id="B" value="B" />
-        <div class="container-tierlist" id="drop-area B"></div>
-        <input type="text" name="C" class="tiers" id="C" value="C" />
-        <div class="container-tierlist" id="drop-area C"></div>
-        <input type="text" name="D" class="tiers" id="D" value="D" />
-        <div class="container-tierlist" id="drop-area D"></div>
+      <div style="display: flex">
+        <div class="container">
+          <input type="text" name="S" class="tiers" id="S" value="S" />
+          <div class="container-tierlist" id="drop-area S"></div>
+          <input type="text" name="A" class="tiers" id="A" value="A" />
+          <div class="container-tierlist" id="drop-area A"></div>
+          <input type="text" name="B" class="tiers" id="B" value="B" />
+          <div class="container-tierlist" id="drop-area B"></div>
+          <input type="text" name="C" class="tiers" id="C" value="C" />
+          <div class="container-tierlist" id="drop-area C"></div>
+          <input type="text" name="D" class="tiers" id="D" value="D" />
+          <div class="container-tierlist" id="drop-area D"></div>
+        </div>
+        <div class="scroll-container">
+          <p class="scroll-title">Data Stucture operations</p>
+          <div class="scroll-content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
+              in animi? Non minus veritatis magnam quis totam eum tempora culpa
+              ex vero ipsa.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
