Background styles modified

--- a/index.html
+++ b/index.html
@@ -32,56 +32,7 @@
         </div>
         <div class="scroll-container">
           <p class="scroll-title">Data Stucture operations</p>
-          <div class="scroll-content">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              aperiam, eos eaque architecto voluptatem voluptatibus voluptates
-              in animi? Non minus veritatis magnam quis totam eum tempora culpa
-              ex vero ipsa.
-            </p>
-          </div>
+          <div class="scroll-content"></div>
         </div>
       </div>
     </div>
