minor style changes and refactor

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <div class="container-options"></div>
       <div style="display: flex">
         <div class="container">
-          <input type="text" name="S" class="tiers" id="S" value="S" />
-          <div class="container-tierlist" id="drop-area S"></div>
-          <input type="text" name="A" class="tiers" id="A" value="A" />
-          <div class="container-tierlist" id="drop-area A"></div>
-          <input type="text" name="B" class="tiers" id="B" value="B" />
-          <div class="container-tierlist" id="drop-area B"></div>
-          <input type="text" name="C" class="tiers" id="C" value="C" />
-          <div class="container-tierlist" id="drop-area C"></div>
-          <input type="text" name="D" class="tiers" id="D" value="D" />
-          <div class="container-tierlist" id="drop-area D"></div>
+          <input type="text" name="S" class="tiers" id="S-tier" value="S" />
+          <div class="container-tierlist" id="S"></div>
+          <input type="text" name="A" class="tiers" id="A-tier" value="A" />
+          <div class="container-tierlist" id="A"></div>
+          <input type="text" name="B" class="tiers" id="B-tier" value="B" />
+          <div class="container-tierlist" id="B"></div>
+          <input type="text" name="C" class="tiers" id="C-tier" value="C" />
+          <div class="container-tierlist" id="C"></div>
+          <input type="text" name="D" class="tiers" id="D-tier" value="D" />
+          <div class="container-tierlist" id="D"></div>
         </div>
         <div class="scroll-container">
           <p class="scroll-title">Data Stucture operations</p>
