--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="container-options"></div>
+      <div class="container-options" draggable="false"></div>
       <div style="display: flex">
         <div class="container">
           <input type="text" name="S" class="tiers" id="S-tier" value="S" />
