--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="./init.js"></script>
+    <script type="module" src="./src/init.js"></script>
     <title>TierList clone</title>
   </head>
   <body>
