--- a/index.html
+++ b/index.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="INTERACTIVE Doubly Linked Lists with FUN examples!"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/public/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/public/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/public/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./src/public/favicon_io/site.webmanifest" />
     <link rel="stylesheet" href="./styles.css" />
     <script type="module" src="./src/init.js"></script>
-    <title>TierList clone</title>
+    <title>Shinobi Data Structures</title>
   </head>
   <body>
     <div class="main">
