--- a/index.html
+++ b/index.html
@@ -34,9 +34,24 @@
     <link rel="manifest" href="./src/public/favicon_io/site.webmanifest" />
     <link rel="stylesheet" href="./styles.css" />
     <script type="module" src="./src/init.js"></script>
+    <!-- script -->
+
+    <script src="https://static.zenvia.com/embed/js/zenvia-chat.min.js"></script>
+    <script>
+      var zchat = new ZenviaChat("68e79c3f54463832549df6d3ab2b59b3")
+        .embedded("buttonless")
+        .build();
+    </script>
+    <!-- Fim do código do chat -->
     <title>Shinobi Data Structures</title>
   </head>
   <body>
+    <div class="example">
+      <input type="button" value="open()" onclick="zchat.open()" />
+      <input type="button" value="close()" onclick="zchat.close()" />
+      <input type="button" value="toggle()" onclick="zchat.toggle()" />
+    </div>
+
     <div class="main">
       <div class="container-options" draggable="false"></div>
       <div style="display: flex">
