--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script type="module" src="./src/init.js"></script>
     <!-- script -->
 
-    <script src="https://static.zenvia.com/embed/js/zenvia-chat.min.js"></script>
+    <script src="https://static.zenvia.com/embed/js/zenvia-chat.hlg.min.js"></script>
     <script>
       var zchat = new ZenviaChat("68e79c3f54463832549df6d3ab2b59b3")
         .embedded("buttonless")
